samples/_failures_safe/1761005161_408ae5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06c1d62f.c: In function ‘main’:
./samples/SAFE/__tmp_06c1d62f.c:179:5: error: expected expression at end of input
  179 |     for (size_t i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_06c1d62f.c:179:5: error: expected declaration or statement at end of input
